Nameplates fixes